# stt-server

./: .dockerignore  .gitignore  CLAUDE.md  GPU_VERIFICATION_REPORT.md  LICENSE  README.md  app.py  config.py  pyproject.toml
.github/workflows/: ci.yml
backends/: nemo.py  registry.py  whisper.py
benchmarks/: README.md  __init__.py  _drops.py  client_file.py  client_realtime.py  client_ws.py  corpus.py  cuda_runbook.md  results.py  run_accuracy.py  run_endpointing.py  run_load.py  run_stabilizer_study.py  sampling.py  server.py
configs/: funasr.yaml  mock.yaml  qwen3asr.yaml  sherpa.yaml
deploy/: Dockerfile  Dockerfile.gpu  docker-compose.yaml  prometheus.yml
deploy/grafana/: dashboard.json  dashboards.yml  datasource.yml
docs/: architecture.md  backends.md  openai-compat.md
docs/benchmarks/: methodology.md  report.md
docs/superpowers/plans/: 2026-03-21-nemo-backend.md  2026-03-21-whisper-backend.md  2026-07-02-plan1-core-server.md  2026-07-03-plan2-openai-adapters.md  2026-07-03-plan3-backends-observability.md  2026-07-03-plan4-benchmarks-load-docs.md
docs/superpowers/specs/: 2026-03-21-nemo-backend-design.md  2026-03-21-whisper-backend-design.md  2026-07-02-stt-server-design.md
examples/: ws_client.py
scripts/: download_models.py  run_gpu_suite.sh
src/stt_server/: __main__.py  logging.py
src/stt_server/api/: app.py  guards.py  native_ws.py  realtime_ws.py  transcriptions_http.py
src/stt_server/backends/: __init__.py  _audio.py  base.py  mock.py  registry.py
src/stt_server/backends/funasr/: __init__.py  backend.py
src/stt_server/backends/qwen3asr/: __init__.py  backend.py
src/stt_server/backends/sherpa/: __init__.py  backend.py
src/stt_server/config/: settings.py
src/stt_server/core/: audio.py  endpointing.py  events.py  session.py  stabilizer.py  vad.py  vad_silero.py
src/stt_server/metrics/: __init__.py  registry.py
tests/: conftest.py  test_config_profiles.py  test_download_models.py  test_logging.py  test_main.py  test_package.py
tests/api/: test_app.py  test_guards.py  test_native_ws.py  test_real_socket.py  test_realtime_ws.py  test_transcriptions_http.py
tests/backends/: conformance.py  test_funasr_backend.py  test_funasr_backend_model.py  test_mock_backend.py  test_qwen3asr_backend.py  test_qwen3asr_backend_model.py  test_registry.py  test_sherpa_backend.py  test_sherpa_backend_model.py
tests/benchmarks/: test_accuracy_scoring.py  test_clients.py  test_corpus.py  test_drops.py  test_endpointing_metrics.py  test_flicker_metrics.py  test_load_logic.py
tests/config/: test_settings.py
tests/core/: test_audio.py  test_endpointing.py  test_events.py  test_session.py  test_session_backpressure.py  test_stabilizer.py  test_vad.py  test_vad_silero.py
tests/deploy/: test_dockerfiles.py
tests/fixtures/: README.md  speech_16k_mono_s16le.pcm
tests/helpers/: audio.py
tests/metrics/: test_metrics.py
tests/mock/: test_nemo_backend.py  test_whisper_backend.py
