[project]
name = "realtime-stt-ws"
version = "0.1.0"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi[standard]>=0.128.6,<1",
    "structlog>=24.0",
    "prometheus-client>=0.21",
    "pydantic-settings>=2.0",
    "janus>=1.0",
    "uuid-utils>=0.9",
    "modelscope>=1.34.0",
]

[project.optional-dependencies]
qwen3 = ["qwen-asr[vllm]>=0.0.6", "numpy"]
nemo = ["nemo_toolkit[asr]", "torch"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "websockets>=13.0",
    "numpy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
